cloned react-starter-kit; modified the home page and added first files for the repository list and repository list item + tests; added basic wrapper for the GitHub API; added handler for the query string, so that the user ID can be specified in the URL

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "director": "^1.2.7",
     "flux": "^2.0.1",
     "object-assign": "^2.0.0",
-    "react": "^0.12.2"
+    "querystring": "^0.2.0",
+    "react": "^0.12.2",
+    "string-template": "^0.2.0",
+    "superagent": "^0.21.0"
   },
   "devDependencies": {
     "browser-sync": "^1.8.1",
