--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-sync": "^1.8.1",
     "css-loader": "^0.9.0",
     "del": "^1.1.0",
+    "font-awesome": "^4.2.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-cache": "^0.2.4",
