--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Git uses this file to determine which files and directories to ignore
 # https://help.github.com/articles/ignoring-files
 
+.DS_Store
 build
 bower_components
 node_modules
